--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
             <div class="col-md-3"></div>
             <div class="col-md-6 text-center">
                     <div class="form-group" >
+                            <img src="img.png" class="mx-auto img-fluid" >
+                            <br><br>
                             <label for="usr" style="font-family: Verdana, Geneva, Tahoma, sans-serif;" >ENTER YOUR USER NAME:</label>
-                            <input type="text" class="form-control" id="usr" placeholder="GITHUB USERNAME" >
+                            <input type="text" class="form-control border border-danger" id="usr" placeholder="ENTER GITHUB USERNAME......" >
                             <br>
-                            <button class="btn  btn-danger" onclick="loadDoc()">GET DATA </button>
+                            <button class="btn  btn-danger" onclick="loadDoc()" style="font-family: sans-serif">GET DATA </button>
                     </div>
             </div>
         </div>
